--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,9 @@
         "psr-4": {
             "Zero\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.3",
+        "php-coveralls/php-coveralls": "^2.1"
     }
 }
