--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_script:
   - composer install
  
 script:
-  - vendor/bin/phpunit
+  - vendor/bin/phpunit --testdox
 
 after_success:
   - travis_retry php vendor/bin/php-coveralls -v
